RESOLVED FIXED83252
[BlackBerry] Empty Referrer should not be set into ResourceRequest when loading a main resource.
https://bugs.webkit.org/show_bug.cgi?id=83252
Summary [BlackBerry] Empty Referrer should not be set into ResourceRequest when loadi...
Jason Liu
Reported 2012-04-04 23:52:18 PDT
We shouldn't set empty Referrer if there is not a Referrer at all.
Attachments
Patch (2.89 KB, patch)
2012-04-05 02:49 PDT, Jason Liu
no flags
Patch (2.75 KB, patch)
2012-04-05 04:17 PDT, Jason Liu
no flags
Patch (2.75 KB, patch)
2012-04-05 04:25 PDT, Jason Liu
no flags
Patch (2.75 KB, patch)
2012-04-05 04:37 PDT, Jason Liu
no flags
Jason Liu
Comment 1 2012-04-05 02:49:56 PDT
Leo Yang
Comment 2 2012-04-05 03:17:16 PDT
Comment on attachment 135790 [details] Patch LGTM.
Leo Yang
Comment 3 2012-04-05 03:22:52 PDT
Comment on attachment 135790 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=135790&action=review > LayoutTests/http/tests/misc/resources/referrer-main-resource-expected.txt:1 > +PASS: The server doesn't receive a referrer. Nit: doesn't --> didn't > LayoutTests/http/tests/misc/resources/referrer-main-resource.php:13 > + document.write("PASS: The server doesn't receive a referrer."); Ditto.
Charles Wei
Comment 4 2012-04-05 03:39:52 PDT
Comment on attachment 135790 [details] Patch Test case can be made simpler by echo the corresponding JS code directly, instead of into "var result", which need to be processed in the client side.
Jason Liu
Comment 5 2012-04-05 04:17:46 PDT
Jason Liu
Comment 6 2012-04-05 04:25:14 PDT
Rob Buis
Comment 7 2012-04-05 04:27:46 PDT
Comment on attachment 135801 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=135801&action=review > LayoutTests/http/tests/misc/resources/referrer-main-resource.php:12 > + layoutTestController.dumpAsText(); This is usually done before the actual test, have a look at other tests.
Jason Liu
Comment 8 2012-04-05 04:37:29 PDT
Charles Wei
Comment 9 2012-04-05 18:32:29 PDT
Comment on attachment 135803 [details] Patch Looks good to me. Need an webkit reviewer to approve.
WebKit Review Bot
Comment 10 2012-04-05 19:51:22 PDT
Comment on attachment 135803 [details] Patch Clearing flags on attachment: 135803 Committed r113406: <http://trac.webkit.org/changeset/113406>
WebKit Review Bot
Comment 11 2012-04-05 19:51:27 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.