[BlackBerry] Empty Referrer should not be set into ResourceRequest when loading a main resource. https://bugs.webkit.org/show_bug.cgi?id=83252

Patch by Jason Liu <jason.liu@torchmobile.com.cn> on 2012-04-05
Reviewed by George Staikos.

Test: http/tests/misc/resources/referrer-main-resource.php

* Api/WebPage.cpp:
(BlackBerry::WebKit::WebPagePrivate::load):

Canonical link: https://commits.webkit.org/100736@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@113406 268f45cc-cd09-0410-ab3c-d52691b4dbfc