third_party/WebKit/LayoutTests/http/tests/misc/resources/referrer-main-resource.php
@@ -1,0 +1,21 @@
+FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
+<html>
+<head>
+<script>
+function runTest() {
+
+    if (window.layoutTestController)
+        layoutTestController.dumpAsText();
+
+    <?php if (isset($_SERVER['HTTP_REFERER']))
+              echo 'document.write("FAIL: The server should not receive a referrer which is not set by user agent.");';
+          else
+              echo 'document.write("PASS: The server didn\'t receive a referrer.");';
+    ?>;
+
+}
+</script>
+</head>
+<body onload="runTest()">
+</body>
+</html>
